Update html5-canvas try 1.html

--- a/html5-canvas try 1.html
+++ b/html5-canvas try 1.html
@@ -10,7 +10,7 @@
         ctx.save();
         ctx.moveTo(x,y);
         ctx.translate(x,y);
-        // ctx.save();
+        // ctx.save(); //remove saving
         
         //draw a
         ctx.rotate(rotation);
